--- a/retreive_publications.ipynb
+++ b/retreive_publications.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "4bb71aab",
+   "id": "3808deeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 442,
    "id": "5b933871",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,9 @@
     "    \n",
     "def format_arxiv(paper):\n",
     "    authors = paper.authors\n",
-    "    authors = \", \".join([format_author_arxiv(\" \".join([i[0] for i in a.name.split(\" \")][:1]+a.name.split(\" \")[1:])) for a in authors])\n",
+    "    #authors = \", \".join([format_author_arxiv(\" \".join([i[0] for i in a.name.split(\" \")][:1]+a.name.split(\" \")[1:])) for a in authors])\n",
+    "    authors = \", \".join([format_author_arxiv(a.name) for a in authors])\n",
+    "\n",
     "    title = paper.title\n",
     "    journal = \"Arxiv Preprint\"\n",
     "    link = paper.entry_id\n",
@@ -237,8 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
-   "id": "03d47e7b",
+   "execution_count": null,
+   "id": "1d1d1aba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,8 +255,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
-   "id": "e8b759c2",
+   "execution_count": null,
+   "id": "3d14a7d6",
    "metadata": {
     "scrolled": true
    },
@@ -267,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 433,
-   "id": "b611274c",
+   "id": "aea49c0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 434,
-   "id": "fb0c7200",
+   "id": "e09ad92e",
    "metadata": {},
    "outputs": [
     {
