--- a/retreive_publications.ipynb
+++ b/retreive_publications.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "06b2ebf9",
+   "id": "31abc202",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,27 @@
     "my_papers = [paper for paper in papers if am_i_in(paper) ]\n",
     "my_papers = sorted(my_papers, key = lambda paper : paper[\"published\"][\"date-parts\"][0],reverse = True)\n",
     "my_papers = [i for i in my_papers if (i[\"container-title\"][0]!=\"SSRN Electronic Journal\") and (\"Author Correction:\" not in i[\"title\"][0])]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 529,
+   "id": "53d8bde5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Springer Science and Business Media LLC'"
+      ]
+     },
+     "execution_count": 529,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_papers[-10][\"publisher\"]"
    ]
   },
   {
@@ -245,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 443,
-   "id": "8abd3288",
+   "id": "c631ed93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 444,
-   "id": "baf17506",
+   "id": "52a6ae34",
    "metadata": {
     "scrolled": true
    },
@@ -274,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 445,
-   "id": "19e24079",
+   "id": "54d112c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 446,
-   "id": "ef3fa575",
+   "id": "a995a299",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f8d8992",
+   "id": "abeeb66a",
    "metadata": {},
    "source": [
     "# Retreieve videos"
@@ -327,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 470,
-   "id": "4627b4c4",
+   "id": "46d8d8fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 514,
-   "id": "47f9d818",
+   "id": "13a8f377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 518,
-   "id": "62b28bc6",
+   "id": "a65b2d74",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 473,
-   "id": "d4b0b5a7",
+   "id": "4b726e21",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 475,
-   "id": "b97b1760",
+   "id": "e2bfce04",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 476,
-   "id": "3a890316",
+   "id": "11ca51c8",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 477,
-   "id": "cdb0d7f4",
+   "id": "93ca4136",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 478,
-   "id": "392c1ca7",
+   "id": "706728c3",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 479,
-   "id": "8eec08c2",
+   "id": "4e4ea5c2",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 480,
-   "id": "164e94cb",
+   "id": "4ac5c207",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 481,
-   "id": "305478fc",
+   "id": "47ee7378",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 510,
-   "id": "cbed1be3",
+   "id": "42e33312",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 505,
-   "id": "5839c9dc",
+   "id": "9ce3a3b1",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 498,
-   "id": "6b0f2685",
+   "id": "2164ca0f",
    "metadata": {},
    "outputs": [
     {
